ver. 0.9.9.8.2
- gmoccapy_plasma, changed pin names to follow the pin naming convention

ver. 0.9.9.8.1
- self.data.jog_increments now is self.jog_increments
  changed the increments handling a little bit
  so there is no need any more for self.no_increments
- changed code from self.gscreen.halcomp to self.halcomp, because it is the same ;-)
- prepared to be able to get an gmoccapy hal component

ver. 0.9.9.8
- bug in jogging with buttons and SHIFT hold down, as that would
  result in a move at max velocity, not taking in care the max vel slider
- renamed self.data.ob to self.onboard_kb to make code clearer
- self.data.plot_view was a relict from gscreen, because gscreen needs to toggle 
  through the views, we can select them directly, so this data is gone now
- self.data.hide_cursor is now self.hide_cursor so this is different to gscreen, so 
  both GUI should not influence each other
- self.data.key_event_last changed to self.last_key_event (distinguish from gscreen)
- corrected some typo in release notes
- self.data.file replaced with self.stat.file, as it is not necessary to hold that on data
- self.data.estopped replaced with self.stat.task_state
- self.data.machine_on replaced with self.stat.task_state
- self.data.all_homed is now self.all_homed so I know that this value is not set from gscreen
- self.data.spindle_speed and self.data.spindle_direction replaced with self.stat statemenets
- self.data.flood and self.data.mist replaced with stat statements
- self.data.active_feed replaced with stat statements, resulting in auto units change also for
  the speed labels
- self.data.diameter_mode is now self.diameter_mode so its clear it come from gmoccapy
- gremlin does react now on auto_units behavior of Combi_DRO
- all sliders (scales) change according to active Gcode G20 / G21
- executing an MDI command will change the keyboard button to allow linuxcnc.aboart()

ver. 0.9.9.7.6
- solved the bug wrong units on start up without the preference file