@@ -1,5 +1,6 @@
 ver. 0.9.9.8.2
 - gmoccapy_plasma, changed pin names to follow the pin naming convention
+- included THC Button state in persistaence (plasma.var)
 
 ver. 0.9.9.8.1
 - self.data.jog_increments now is self.jog_increments
